[package]
name = "sniplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tls-parser = "0.11.0"
tls-client_hello-parser = "0.2.1"
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
serde = {version = "1.0.160", features = ["derive"]}
toml = "0.5.8"
dashmap = {version= "5.4.0", features = ["serde"]}
futures = "0.3.28"
log = {version= "0.4.17"}
stderrlog = "0.5.4"
rand = "0.8.5"

[profile.release]
opt-level = 3